fix pomxml and add functionnalities